# CPS_352

./: .gitignore  README.md
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
Project_1_Mosaic/CMakeProject1/CMakeProject1/: CMakeProject1.cpp  CMakeProject1.h
Project_2_Kmeans/: ImageCompressor.py
Project_3_Slingshot/: Assembly-CSharp.csproj
Project_3_Slingshot/Assets/: Bird.cs  Cloud Particles.prefab  Cloud.mat  Enemy.cs  LevelController.cs  TrailMaterial.mat  WhiteArrow.mat
Project_3_Slingshot/Assets/Green Bird/: Green Bird.controller  GreenBird.anim
Project_3_Slingshot/Assets/Scenes/: Level1.unity  Level2.unity  Level3.unity  VictoryScene.unity
Project_3_Slingshot/Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF.asset
Project_3_Slingshot/Assets/monster/: Monster.anim  Monster.controller
Project_3_Slingshot/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
